Corrected type in waypoints. Changed lng to long in waypoints. Corrected misalignment in Hornet waypoints.

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -72,7 +72,7 @@ textarea:focus, input:focus{
 
 #weather-map-box {
     left: 10px;
-    bottom: 10px; 
+    bottom: 50px; 
     position: absolute;
     width: 100px;
     height: 50px;
@@ -233,11 +233,13 @@ input[type=number] {
 
 /* Icons */
 .icon-text {
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    text-shadow: -2px 0 1px black, 0 2px 1px black, 2px 0 1px black, 0 -2px 1px black;
-    color: #EEEEEE;
+    text-shadow: rgb(238, 238, 238) 2px 0px 0px, rgb(238, 238, 238) 1.75517px 0.958851px 0px, rgb(238, 238, 238) 1.0806px 1.68294px 0px, rgb(238, 238, 238) 0.141474px 1.99499px 0px, rgb(238, 238, 238) -0.832294px 1.81859px 0px, rgb(238, 238, 238) -1.60229px 1.19694px 0px, rgb(238, 238, 238) -1.97998px 0.28224px 0px, rgb(238, 238, 238) -1.87291px -0.701566px 0px, rgb(238, 238, 238) -1.30729px -1.5136px 0px, rgb(238, 238, 238) -0.421592px -1.95506px 0px, rgb(238, 238, 238) 0.567324px -1.91785px 0px, rgb(238, 238, 238) 1.41734px -1.41108px 0px, rgb(238, 238, 238) 1.92034px -0.558831px 0px;
+    /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
+    /* text-shadow: -2px 0 1px black, 0 2px 1px black, 2px 0 1px black, 0 -2px 1px black; */
+    color: #000000;
+    /* background-color: #EEEEEEAA; */
     text-align: center;
-    font-size: 12px;
+    font-size: 10px;
     text-transform: uppercase;
     font-family: 'Helvetica';
     box-sizing: border-box;
